ndb_insert.test, ndb_insert.result, ha_ndbcluster.cc:   Bug#27980 INSERT IGNORE wrongly ignores NULLs in unique index: added check for null values

mysql-test/t/ndb_insert.test:
  Bug#27980 INSERT IGNORE wrongly ignores NULLs in unique index: added check for null values
sql/ha_ndbcluster.cc:
  Bug#27980 INSERT IGNORE wrongly ignores NULLs in unique index: added check for null values
mysql-test/r/ndb_insert.result:
  Bug#27980 INSERT IGNORE wrongly ignores NULLs in unique index: added check for null values